syntax = "proto3";

import "google/protobuf/timestamp.proto";

package validator;

// The greeting service definition.
service Validator {
  rpc ValidateDeployment(Deployment) returns (DeploymentResponse);
}

message GenericReply{
  int32 ResponseCode = 1;
  string ResponseMessage = 2;
}

message Limitation{
  int32 CPU = 1;
  int32 Memory = 2;
}

message Deployment{
  string Name = 1;
  int32 Replicas = 2;
  string Image = 3;
  repeated string Commands = 4;
  Limitation Limit = 5;
  Limitation Request = 6;
  google.protobuf.Timestamp LastModified = 7;
}

message DeploymentResponse{
  bool Allowed = 1;
  Deployment deployment = 2;
  string Reason = 3;
}

message Pod{
  string Name = 1;
  string Image = 2;
  repeated string Commands = 3;
  Limitation Limit = 4;
  Limitation Request = 5;
  string NodeName = 6;
  PodStatus Status = 7;
  google.protobuf.Timestamp LastModified = 8;
}

message AcceptableLimits{
  Limitation minima = 1;
  Limitation maxima = 2;
}

enum PodStatus {
  Pending=0;
  Creating=1;
  Running=2;
  Failed=3;
  Terminating=4;
}
